# rank-inflation

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
Docker/: devcontainer.json
bindings/matlab/: clique_optimization_mex.cpp
bindings/python/: CMakeLists.txt  analytic_center_bindings.cpp  py_clipperplus.cpp  ranktools.pyi  setup.py.in  test_analytic_center.py  wrapper.h
examples/python/: analysis.py  bunny_dataset.py  bunny_test.py  demo_clipperp.py  utils.py
include/: analytic_center.hpp  interior_point_sdp.hpp  lin_alg_tools.hpp  line_search_cert.hpp  matrix_free_methods.hpp  max_clique_certifier.hpp  max_clique_sdp.hpp  preconditioners.hpp  rank_inflation.hpp  rank_reduction.hpp  utils.hpp
include/clipperplus/: clipperplus_clique.h  clipperplus_graph.h  clipperplus_heuristic.h  clique_optimization.h
include/max_clique_sdp/: lovasz_theta_sdp.hpp  max_clique_sdp.hpp  rank_inflation.hpp  rank_reduction.hpp
parameters/: cuhallar_params_sparse.cfg
python/ranktools_pytorch/: __init__.py  analytic_center_torch.py  certificate.py  lin_alg_torch.py  solvers.py  utils.py
python/scripts/: analytic_center.py  max_clique.py  max_clique_analysis.py  stereo_loc.py
python/src/examples/mat_weight_loc/: stereo_cert.py  stereo_loc.py  stereo_pose_est.py
python/src/examples/max_clique/: max_clique.py
python/tests/: __init__.py  fixtures.py  profiling.py  test_analytic_center.py  test_lin_sys.py  test_solvers.py
python/tests/data/: lovasz_theta_matrices.json
src/: analytic_center.cpp  analytic_center_cli.cpp  clipperplus_clique.cpp  clipperplus_graph.cpp  clipperplus_heuristic.cpp  clique_optimization.cpp  interior_point_sdp.cpp  line_search_cert.cpp  max_clique_sdp.cpp  rank_inflation.cpp  rank_reduction.cpp  utils.cpp
test/: CMakeLists.txt  analytic_center_test.cpp  clipperplus_test.cpp  line_search_cert_test.cpp  max_clique_certifier_test.cpp  max_clique_sdp_test.cpp  rank_inflation_test.cpp  rank_reduction_test.cpp  utils_test.cpp
test/data/: analytic_center_certify_overrides.yaml  test_prob_1.txt  test_prob_10G.txt  test_prob_10Gc.txt  test_prob_10L.txt  test_prob_10Lc.txt  test_prob_11G.txt  test_prob_11Gc.txt  test_prob_11L.txt  test_prob_11Lc.txt  test_prob_12G.txt  test_prob_12Gc.txt  test_prob_12L.txt  test_prob_12Lc.txt  test_prob_13G.txt  test_prob_13Gc.txt  test_prob_13L.txt  test_prob_13Lc.txt  test_prob_14G.txt  test_prob_15G.txt  test_prob_16G.txt  test_prob_16Gc.txt  test_prob_16L.txt  test_prob_16Lc.txt  test_prob_2.txt  test_prob_3.txt  test_prob_4.txt  test_prob_5.txt  test_prob_6.txt  test_prob_7.txt  test_prob_8G.txt  test_prob_8Gc.txt  test_prob_8L1.txt  test_prob_8L1c.txt  test_prob_8L2.txt  test_prob_8L2c.txt  test_prob_9.txt  test_prob_9G.txt  test_prob_9Gc.txt  test_prob_9L.txt  (+4 more)
test/include/: circle_problem.hpp  generated_exported_sdp_problems.hpp  generic_sdp_problems.hpp  lovasz_theta_problems.hpp  test_harness.hpp
test/python/: test_clipper.py
