[build-system]
requires = ["scikit-build-core>=0.5", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "ranktools"
version = "0.0.1"
description = "Python bindings for RankTools AnalyticCenter solver"
requires-python = ">=3.10"
dependencies = [
	"numpy",
	"scipy",
	"scikit-sparse==0.4.16",
	"casadi",
	"cvxpy",
	"mosek",
	"matplotlib",
	"pandas",
	"pybind11",
	"pybind11-stubgen",
	"scikit-build-core",
    "theseus-ai",
	"cmake",
	"ninja",
	"pytest",
	"torch==2.2.1",
	"torchaudio==2.2.1",
	"torchvision==0.17.1",
	"torchelastic==0.2.2",
]

[project.optional-dependencies]
test = ["pytest"]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }

[tool.scikit-build]
# Tell scikit-build-core to pass the flag that enables the pybind11 target
cmake.args = ["-DBUILD_PYTHON_BINDINGS=ON", "-DBUILD_TESTS=OFF"]
cmake.minimum-version = "3.15"
# The compiled module and its stub are installed to the wheel root
wheel.install-dir = "."
# Include pure Python sources from python/src in the wheel
wheel.packages = ["python/src/examples"]

# ---------------------------------------------------------------------------
# Optional install-time flags (passed via pip's -C / --config-settings)
# ---------------------------------------------------------------------------
# Usage examples:
#   pip install .                                       # Release, no debug
#   pip install . -C cmake.define.DEBUG_FLAG=ON         # Release + debug prints
#   pip install . -C cmake.define.ENABLE_PARALLEL=ON    # turn on parallel loops
#   pip install . -C cmake.define.CMAKE_BUILD_TYPE=Debug                     # Debug build
#   pip install . -C cmake.define.CMAKE_BUILD_TYPE=Debug -C cmake.define.DEBUG_FLAG=ON  # both
